added Observable, tightened access